--- a/OS/hack/config.yaml
+++ b/OS/hack/config.yaml
@@ -2,7 +2,7 @@
 gfcli:
   gen:
     dao:
-      - link:            "mysql:gfast3:gfast333@tcp(127.0.0.1:3306)/gfast-v32"
+      - link:            "mysql:root:1234qwer@tcp(127.0.0.1:3306)/fastcc"
         tables:          "sys_role_dept"
         removePrefix:    "gf_"
         descriptionTag:  true
