--- a/OS/hack/config.yaml
+++ b/OS/hack/config.yaml
@@ -3,7 +3,7 @@ gfcli:
   gen:
     dao:
       - link:            "mysql:root:1234qwer@tcp(127.0.0.1:3306)/fastcc"
-        tables:          "sys_details,sys_jiangcheng,sys_mission,sys_study,sys_userex,cc_room,cc_room_phone,sys_state"
+        tables:          "demo_gen,demo_gen_class"
         removePrefix:    "gf_"
         descriptionTag:  true
         noModelComment:  true
